Luxand/FaceSDK/samples/Lookalikes/Delphi/LuxandFaceSDK.pas


// Obsolete functions
function FSDK_LocateFace(Image: HImage; x1, y1, x2, y2: PInteger; LeftEyeX, LeftEyeY, RightEyeX, RightEyeY: PInteger;
                         ExtractFaceImage: integer; Width: integer; Height: integer; ExtractedFaceImage: PHImage;
                         ExtractedLeftEyeX, ExtractedLeftEyeY, ExtractedRightEyeX, ExtractedRightEyeY: PInteger): integer; cdecl; external 'FaceSDK.dll';
function FSDK_LocateFacialFeatures(Image: HImage; FacialFeatures: PFSDK_Features): integer; cdecl; external 'FaceSDK.dll';

// Camera
type
    FSDK_VideoFormatInfo = record
	    Width: integer;
    	Height: integer;
    	BPP: integer;
    end;

    PFSDK_VideoFormatInfo = ^FSDK_VideoFormatInfo;
    FSDK_VideoFormatInfoArray = array[0..255] of FSDK_VideoFormatInfo;
    PFSDK_VideoFormatInfoArray = ^FSDK_VideoFormatInfoArray;

    FSDK_CameraList = array[0..255] of PWideChar;
    PFSDK_CameraList = ^FSDK_CameraList;

function FSDK_SetCameraNaming(UseDevicePathAsName: boolean): integer; cdecl; external 'facesdk.dll';
function FSDK_InitializeCapturing: integer; cdecl; external 'facesdk.dll';
function FSDK_FinalizeCapturing: integer; cdecl; external 'facesdk.dll';
function FSDK_GetCameraList(CameraList: PWideChar; CameraCount: PInteger): integer; cdecl; external 'facesdk.dll';
function FSDK_GetCameraListEx(CameraNameList: PWideChar; CameraDevicePathList: PWideChar; CameraCount: PInteger): integer; cdecl; external 'facesdk.dll';
function FSDK_FreeCameraList(CameraList: Pointer; CameraCount: integer): integer; cdecl; external 'facesdk.dll';
function FSDK_GetVideoFormatList(CameraName: PWideChar; VideoFormatList: PFSDK_VideoFormatInfo; VideoFormatCount: PInteger): integer; cdecl; external 'facesdk.dll';
function FSDK_FreeVideoFormatList(VideoFormatList: Pointer): integer; cdecl; external 'facesdk.dll';
function FSDK_SetVideoFormat(CameraName: PWideChar; VideoFormat: FSDK_VideoFormatInfo ): integer; cdecl; external 'facesdk.dll';
function FSDK_OpenVideoCamera(CameraName: PWideChar; CameraHandle: PInteger): integer; cdecl; external 'facesdk.dll';
function FSDK_CloseVideoCamera(CameraHandle: integer): integer; cdecl; external 'facesdk.dll';
function FSDK_GrabFrame(CameraHandle: integer; Image: PHImage): integer; cdecl; external 'facesdk.dll';
function FSDK_OpenIPVideoCamera(CompressionType: FSDK_VIDEOCOMPRESSIONTYPE; URL: PAnsiChar; Username: PAnsiChar; Password: PAnsiChar; TimeoutSeconds: integer; CameraHandle: PInteger): integer; cdecl; external 'FaceSDK.dll';

function FSDK_SetHTTPProxy(ServerNameOrIPAddress: PAnsiChar; Port: Word; Username: PAnsiChar; Password: PAnsiChar): integer; cdecl; external 'FaceSDK.dll';

// Tracker
type
    HTracker = integer;
    PHTracker = ^HTracker;
    TIDArray = array[0..65535] of int64;
    PIDArray = ^TIDArray;

function FSDK_CreateTracker(Tracker: PHTracker): integer; cdecl; external 'FaceSDK.dll';
function FSDK_FreeTracker(Tracker: HTracker): integer; cdecl; external 'FaceSDK.dll';
function FSDK_ClearTracker(Tracker: HTracker): integer; cdecl; external 'FaceSDK.dll';
function FSDK_SetTrackerParameter(Tracker: HTracker; ParameterName, ParameterValue: PAnsiChar): integer; cdecl; external 'FaceSDK.dll';
function FSDK_SetTrackerMultipleParameters(Tracker: HTracker; Parameters: PAnsiChar; ErrorPosition: PInteger): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetTrackerParameter(Tracker: HTracker; ParameterName, ParameterValue: PAnsiChar; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_FeedFrame(Tracker: HTracker; CameraIdx: int64; Image: HImage; FaceCount: PInt64; IDs: PIDArray; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetTrackerEyes(Tracker: HTracker; CameraIdx, ID: int64; FacialFeatures: PFSDK_Features): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetTrackerFacialFeatures(Tracker: HTracker; CameraIdx, ID: int64; FacialFeatures: PFSDK_Features): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetTrackerFacePosition(Tracker: HTracker; CameraIdx, ID: int64; FacePosition: PFacePosition): integer; cdecl; external 'FaceSDK.dll';
function FSDK_LockID(Tracker: HTracker; ID: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_UnlockID(Tracker: HTracker; ID: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetName(Tracker: HTracker; ID: int64; Name: PAnsiChar; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetAllNames(Tracker: HTracker; ID: int64; Names: PAnsiChar; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_SetName(Tracker: HTracker; ID: int64; Name: PAnsiChar): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetIDReassignment(Tracker: HTracker; ID: int64; ReassignedID: PInt64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetSimilarIDCount(Tracker: HTracker; ID: int64; Count: PInt64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetSimilarIDList(Tracker: HTracker; ID: int64; SimilarIDList: PIDArray; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_SaveTrackerMemoryToFile(Tracker: HTracker; FileName: PAnsiChar): integer; cdecl; external 'FaceSDK.dll';
function FSDK_LoadTrackerMemoryFromFile(Tracker: PHTracker; FileName: PAnsiChar): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetTrackerMemoryBufferSize(Tracker: HTracker; BufSize: PInt64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_SaveTrackerMemoryToBuffer(Tracker: HTracker; var Buffer; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_LoadTrackerMemoryFromBuffer(Tracker: PHTracker; var Buffer): integer; cdecl; external 'FaceSDK.dll';

// Facial attributes

function FSDK_GetTrackerFacialAttribute(Tracker: HTracker; CameraIdx, ID: int64; AttributeName, AttributeValues: PAnsiChar; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_DetectFacialAttributeUsingFeatures(Image: HImage; FacialFeatures: PFSDK_Features; AttributeName, AttributeValues: PAnsiChar; MaxSizeInBytes: int64): integer; cdecl; external 'FaceSDK.dll';
function FSDK_GetValueConfidence(AttributeValues, Value: PAnsiChar; Confidence: PSingle): integer; cdecl; external 'FaceSDK.dll';


implementation

end.
